[package]
name = "persional_site_rust-api"
version = "0.1.0"
authors = ["Khoi Nguyen <ntkhoiptit@gmail.com>"]

[dependencies]
rocket = "0.3.10"
rocket_codegen = "0.3.10"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

diesel = { path = "./src/lib/diesel" }
dotenv = "0.10"


[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

